# PrimoExampleBot

./: .dockerignore  .gitignore  Dockerfile  README.md  count.py  main.py  pyproject.toml  requirements.txt
bot/: __init__.py
bot/core/: __init__.py  bots.py  webhook.py
bot/filters/: __init__.py  callback.py  chat_rights.py  chat_type.py  message_content.py  subscrided.py
bot/handlers/: __init__.py
bot/handlers/commands/: __init__.py
bot/handlers/commands/admins/: __init__.py  settings_cmd.py
bot/handlers/commands/users/: __init__.py  active.py  new_cmd.py  start_cmd.py
bot/handlers/messages/: __init__.py  default.py
bot/keyboards/inline/: __init__.py  decision.py
bot/middlewares/: __init__.py  error_mdw.py  logging_mdw.py  msg_mdw.py  spam_mdw.py  subscription_mdw.py  time_mdw.py
bot/states/: anketa_states.py  new_states.py
bot/templates/: message_callback.py
bot/utils/: __init__.py  argument.py  type_message.py
configs/: __init__.py  cmd_list.py  config.py  roles.py
database/: database.py
locales/: messages.pot
locales/en/LC_MESSAGES/: bot.mo  bot.po
locales/ru/LC_MESSAGES/: bot.mo  bot.po
locales/uk/LC_MESSAGES/: bot.mo  bot.po
middleware/loggers/: logs.py
middleware/validators/: __init__.py  email_vld.py  url_vld.py
tests/database/: conftest.py  test_messages.py  test_roles.py  test_user_stats.py
