[project]
name = "primoexamplebot"
version = "0.1.0"
description = "none"
authors = [
    {name = "admin",email = "inkscaper0349@outlook.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
